Test latex build workflow

--- a/src/Ch2.tex
+++ b/src/Ch2.tex
@@ -14,6 +14,7 @@
         \textbf{Solution:}
         \begin{align*}
             % Add solution here
+            this is a test content for github action
         \end{align*}
 
     \subsection*{Problem 2.2}
