--- a/src/Ch2.tex
+++ b/src/Ch2.tex
@@ -43,6 +43,7 @@
         \textbf{Solution:}
         \begin{align*}
             % Add solution here
+            \text the solution for q3
         \end{align*}
 
 
