--- a/src/Ch2.tex
+++ b/src/Ch2.tex
@@ -42,7 +42,7 @@
         \vspace{1cm}
         \textbf{Solution:}
         \begin{align*}
-            % Add solution here
+            \text{See official solution for answer}
         \end{align*}
 
 
